<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
    <string name="juara_android">Juara Android</string>
    <string name="app_name">HappyBirthday</string>
    <string name="happy_birthday_text">Happy Birthday, Sam!</string>
    <string name="signature_text">From Emma.</string>
    <string name="roll">Roll</string>
    <string name="lemonade_app_name">Lemonade</string>
    <string name="lemon_select">Click to select a lemon!</string>
    <string name="lemon_squeeze">Click to juice the lemon!</string>
    <string name="lemon_drink">Click to drink your lemonade!</string>
    <string name="lemon_empty_glass">Click to start again!</string>
    <string name="lemon_tap_select">Tap the lemon tree to select a lemon</string>
    <string name="lemon_keep">Keep tapping the lemon to squeeze it</string>
    <string name="lemon_tap_drink">Tap the lemonade to drink it</string>
    <string name="lemon_tap_empty">Tap the empty glass to start again</string>
    <string name="lemon_tree">Lemon tree</string>
    <string name="lemon">Lemon</string>
    <string name="lemon_glass">Glass of lemonade</string>
    <string name="lemon_empty">Empty glass</string>
    <string name="squeeze_count">Squeeze count: %1$d, keep squeezing!</string>
    <string name="tip_app_name">Tip Calculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_time">Tip Time</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="tip_amount">Tip amount: %s</string>
    <string name="how_was_the_service_compose">Tip (%)</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="affirmation_app_name">Affirmation</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="doggler_app_name">Dogglers</string>
    <string name="dog_age">Age: %1$s</string>
    <string name="dog_hobbies">Hobbies: %1$s</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="grid">Grid</string>
    <string name="words_app_name">Words</string>
    <string name="detail_prefix">Words That Start With</string>
    <string name="action_switch_layout">Switch Layout</string>
    <string name="look_up_word">Look up word in a Browser Search</string>
    <string name="look_up_words">Show Stored Words</string>
    <string name="word_list_fragment_label">Words That Start With {letter}</string>
    <string name="dessert_app_name">Dessert Clicker</string>
    <string name="dessert_sold">Desserts Sold</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="share_text">I\'ve clicked %1$d Desserts for a total of %2$d$ #AndroidDessertClicker</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="unscramble_app_name">Unscramble</string>
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d of %d words</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="wrong_guess">Wrong Guess!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try again!</string>
    <string name="cupcake_app_name">Cupcake</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_cupcake">One Cupcake</string>
    <string name="six_cupcakes">Six Cupcakes</string>
    <string name="twelve_cupcakes">Twelve Cupcakes</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <string name="lunch_app_name">Lunch Tray</string>
    <string name="title_start_order">Order</string>
    <string name="title_coupons">Coupons</string>
    <string name="title_entree_menu">Entrees</string>
    <string name="title_side_menu">Sides</string>
    <string name="title_accompaniment_menu">Accompaniments</string>
    <string name="title_checkout">Checkout</string>
    <string name="start_order">Start Order</string>
    <string name="subtotal">Subtotal: %s</string>
    <string name="tax">Tax: %s</string>
    <string name="total">Total: %s</string>
    <string name="submit_order">Submit Order</string>
    <string name="order_submitted">Order Submitted!</string>
    <string name="mars_app_name">Mars Photos</string>
    <string name="amphibians_app_name">Amphibians</string>
    <string name="bus_app_name">Bus Schedule</string>
    <string name="bus_stop_header">Stop Name</string>
    <string name="arrival_time_header">Arrival Time</string>
    <string name="inventory_app_name">Inventory</string>
    <string name="sell">Sell</string>
    <string name="inventory_quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="devbyte_app_name">DevByte Viewer</string>
    <string name="forage_app_name">Forage</string>
    <string name="action_settings">Settings</string>
    <string name="list_fragment_label">List Fragment</string>
    <string name="add_fragment_label">Add Fragment</string>
    <string name="forageable_name">Name</string>
    <string name="forageable_location">Location</string>
    <string name="in_season">Currently in season</string>
    <string name="out_of_season">Currently out of season</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="blur_app_name">Blur-O-Matic</string>
    <string name="blur_title">Select Blur Amount</string>
    <string name="select_image">Select Image</string>
    <string name="go">Go</string>
    <string name="see_file">See File</string>
    <string name="description_image">The image to blur and save.</string>
    <string name="blur_lv_1">A little blurred</string>
    <string name="blur_lv_2">More blurred</string>
    <string name="blur_lv_3">The most blurred</string>
    <string name="cancel_work">Cancel Work</string>
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>
    <string name="water_app_name">Water Me</string>
    <string name="schedule">Water %s</string>
    <string name="channel_name">water_channel</string>
    <string name="channel_description">water_reminder</string>
    <string name="water_reminder">Remind me to water in…</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_learn">LearnActivity</string>
    <string name="learn_title">Jetpack Compose tutorial</string>
    <string name="learn_body_1">Jetpack Compose is a modern toolkit for building native Android UI. Compose simplifies and accelerates UI development on Android with less code, powerful tools, and intuitive Kotlin APIs.</string>
    <string name="learn_body_2">In this tutorial, you build a simple UI component with declarative functions. You call Compose functions to say what elements you want and the Compose compiler does the rest. Compose is built around Composable functions. These functions let you define your app\'s UI programmatically because they let you describe how it should look and provide data dependencies, rather than focus on the process of the UI\'s construction, such as initializing an element and then attaching it to a parent. To create a Composable function, you add the @Composable annotation to the function name.</string>
    <string name="task_completed">All tasks completed</string>
    <string name="task_nice_work">Nice work!</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_quadrant">QuadrantActivity</string>
    <string name="quadrant_text_title">Text composable</string>
    <string name="quadrant_text_body">Displays text and follows Material Design guidelines.</string>
    <string name="quadrant_image_title">Image composable</string>
    <string name="quadrant_image_body">Creates a composable that lays out and draws a given Painter class object.</string>
    <string name="quadrant_row_title">Row composable</string>
    <string name="quadrant_row_body">A layout composable that places its children in a horizontal sequence.</string>
    <string name="quadrant_column_title">Column composable</string>
    <string name="quadrant_column_body">A layout composable that places its children in a vertical sequence.</string>
    <string name="title_activity_dice">DiceActivity</string>
    <string name="title_activity_lemonade">LemonadeActivity</string>
</resources>