<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lunch_navigation"
    app:startDestination="@id/startOrderFragment">

    <fragment
        android:id="@+id/startOrderFragment"
        android:name="com.example.happybirthday.lunchtray.ui.StartOrderFragment"
        android:label="@string/title_start_order"
        tools:layout="@layout/fragment_start_order" >
        <action
            android:id="@+id/action_startOrderFragment_to_entreeMenuFragment"
            app:destination="@id/entreeMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/entreeMenuFragment"
        android:name="com.example.happybirthday.lunchtray.ui.EntreeMenuFragment"
        android:label="@string/title_entree_menu"
        tools:layout="@layout/fragment_entree_menu" >
        <action
            android:id="@+id/action_entreeMenuFragment_to_sideMenuFragment"
            app:destination="@id/sideMenuFragment" />
        <action
            android:id="@+id/action_entreeMenuFragment_to_startOrderFragment"
            app:destination="@id/startOrderFragment"
            app:popUpTo="@id/startOrderFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/sideMenuFragment"
        android:name="com.example.happybirthday.lunchtray.ui.SideMenuFragment"
        android:label="@string/title_side_menu"
        tools:layout="@layout/fragment_side_menu" >
        <action
            android:id="@+id/action_sideMenuFragment_to_accompanimentMenuFragment"
            app:destination="@id/accompanimentMenuFragment" />
        <action
            android:id="@+id/action_sideMenuFragment_to_startOrderFragment"
            app:destination="@id/startOrderFragment"
            app:popUpTo="@id/startOrderFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/accompanimentMenuFragment"
        android:name="com.example.happybirthday.lunchtray.ui.AccompanimentMenuFragment"
        android:label="@string/title_accompaniment_menu"
        tools:layout="@layout/fragment_accompaniment_menu" >
        <action
            android:id="@+id/action_accompanimentMenuFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
        <action
            android:id="@+id/action_accompanimentMenuFragment_to_startOrderFragment"
            app:destination="@id/startOrderFragment"
            app:popUpTo="@id/startOrderFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.example.happybirthday.lunchtray.ui.CheckoutFragment"
        android:label="@string/title_checkout"
        tools:layout="@layout/fragment_checkout" >
        <action
            android:id="@+id/action_checkoutFragment_to_startOrderFragment"
            app:destination="@id/startOrderFragment"
            app:popUpTo="@id/startOrderFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>